--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@unseenco/taxi": "^1.6.0",
     "accordion-js": "^3.3.4",
+    "gsap": "^3.12.5",
     "swiper": "^11.1.10"
   }
 }
