--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@unseenco/taxi": "^1.6.0",
     "accordion-js": "^3.3.4",
     "gsap": "^3.12.5",
+    "mixitup": "^3.3.1",
     "swiper": "^11.1.10"
   }
 }
